crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_webchat__attachment.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "event": {
    "attachments": [
      {
        "kind": "image",
        "url": "https://example.invalid/image.png"
      },
      {
        "kind": "file",
        "name": "notes.txt"
      }
    ],
    "id": "<FIXED>",
    "provider": "webchat",
    "text": "attachment message from webchat",
    "timestamp": "<FIXED>",
    "type": "message"
  },
  "ok": true
}
