crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_webchat__reply_thread.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "webchat",
    "id": "<FIXED>",
    "metadata": {
      "universal": "true"
    },
    "session_id": "webchat",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "reply thread message from webchat"
  },
  "ok": true
}
